--- a/css/home.css
+++ b/css/home.css
@@ -250,7 +250,7 @@ p img {
 .notice_top>p:nth-child(2){
 	color:#999;
 	font-size: 13px;
-	padding-bottom:15px;p img
+	padding-bottom:15px;
 }
 .notice_top>p:nth-child(2)>span:nth-child(1){
 	padding-right:20px;
